--- a/css/doctor.css
+++ b/css/doctor.css
@@ -12,42 +12,60 @@ body {
 /* --- 사이드바 --- */
 .sidebar {
   width: 440px;
-  padding: 81px 26px 45px;
   overflow-y: auto;
+}
+.sidebar-inner{
+  display: flex;
+  flex-direction: column;
+  height: 100%; 
+  padding: 81px 25px 41px 25px;
 }
 .form-group {
   margin-bottom: 24px;
 }
 .form-group label {
   display: block;
-  margin-bottom: 6px;
-  font-weight: 500;
-  font-size: 14px;
+  height: 30px;
+  padding-left: 22px;
+  line-height: 30px;
+  margin-bottom: 8px;
+  font-weight: 400;
+  font-size: 25px;
 }
 /* 날짜 입력 */
 .date-picker-wrapper {
   position: relative;
   display: flex;
   align-items: center;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  padding: 6px 10px;
+  /* border: 1px solid #ccc; */
+  border-radius: 18px;
+  height: 52px;
+  padding: 0px 22px;
   cursor: pointer;
+  background: #fff;
+  box-shadow: 0px 0px 5px #0000002B;
 }
 .date-picker-wrapper input {
   border: none;
   outline: none;
   flex: 1;
   cursor: pointer;
+  font-size: 25px;
+  font-weight: 600;
+  color: #474747;
 }
-.date-picker-wrapper .icon {
-  font-size: 18px;
+.date-picker-wrapper .calendar-icon {
+  display: inline-block;
+  width: 29px;
+  height: 25px;
+  background: url(../images/icon_calendar.svg) no-repeat center / contain;
+
 }
 /* 달력 */
 .calendar {
   position: absolute;
-  top: 100%;
-  left: 0;
+  top: 160px;
+  left: 100px;
   margin-top: 6px;
   background: #fff;
   border: 1px solid #ddd;
@@ -92,12 +110,31 @@ body {
 /* 의사 선택 */
 .select-wrapper {
   position: relative;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  /* border: 1px solid #ccc; */
+  border-radius: 18px;
+
   cursor: pointer;
+  background: #fff;
+  box-shadow: 0px 0px 5px #0000002B;
 }
 .select-wrapper .selected {
-  padding: 8px 10px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 22px;
+  height: 52px;
+  font-size: 25px;
+  font-weight: 700;
+}
+.select-wrapper .selected .select-icon{
+  display: inline-block;
+  width: 12px;
+  height: 7px;
+  background: url(../images/icon_dropdown.svg) no-repeat center / contain;
+}
+.select-wrapper .selected:after{
+  
 }
 .select-wrapper .options {
   list-style: none;
@@ -137,24 +174,110 @@ body {
 }
 
 /* 환자 목록 */
-.patient-list ul {
-  list-style: none;
+/* 카드 공통 */
+.patient-card {
+  flex: 1;
+  display: flex; 
+  flex-direction: column;
+  background: #fff;
+  border-radius: 16px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  overflow: hidden;
 }
-.patient-item {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 8px;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-bottom: 4px;
+.patient-card .card-header {
+  padding: 16px;
+  border-bottom: 1px solid #eee;
+  background: #8EA3BC;
 }
-.patient-item:hover {
-  background: #f3f3f3;
-}
-.patient-item.active {
-  background: #6e5de7;
+.patient-card .card-header h3 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
   color: #fff;
 }
+
+/* 리스트 아이템 */
+.patient-card .patient-list {
+  flex: 1;
+  overflow-y: auto;
+  padding: 15px 35px;
+}
+.patient-card .list-item {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 16px;
+  border-radius: 18px;
+  cursor: pointer;
+  transition: background .2s;
+  /* border-top: 2px dotted #EFEFEF; */
+}
+.patient-card .list-item:after{
+  position: absolute;
+  left: 15px;
+  bottom: 0;
+  display: block;
+  content: '';
+  width: calc(100% - 30px);
+  height: 2px;
+  background: url(../images/bg_line.svg) repeat-x;
+}
+.patient-card .list-item:last-child::after{
+  display: none;
+}
+.patient-card .list-item + .list-item {
+
+}
+.patient-card .list-item:hover {
+  background: #F4F6F9;
+}
+
+.patient-card .patient-info{
+  display: flex;
+  flex-direction: row;
+    align-items: center;
+    gap: 15px;
+}
+.patient-card .patient-info .patient-name {
+  font-weight: 500;
+  font-size: 25px;
+}
+/* 아이콘 */
+.patient-card .patient-icon {
+  width: 31px;
+  height: 32px;
+  background: url(../images/icon_patient.svg) no-repeat center / contain;
+}
+
+/* 텍스트 정보 */
+.patient-card .date-info {
+  /* display: flex;
+  justify-content: space-between; */
+  /* width: 100%; */
+}
+
+.patient-card .patient-info .datetime {
+  font-size: 12px;
+  color: #888;
+}
+
+/* active 상태 */
+.patient-card .list-item.active {
+  background: #6B37FB;
+  color: #fff;
+}
+.patient-card .list-item.active::after {
+  display: none;
+}
+.patient-card .list-item.active .patient-icon{
+  background: url(../images/icon_patient_w.svg) no-repeat center / contain;
+}
+.patient-card .list-item.active .datetime {
+  color: #e0dbff;
+}
+
 
 /* --- 메인 컨텐츠 --- */
 .content {
@@ -171,57 +294,102 @@ body {
   position: relative;
 }
 .record-header h1 {
-  font-size: 20px;
-  font-weight: 600;
-  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  position: relative;
   left: 50%;
   transform: translate(-50%);
-  background: #6B37FB;
-  border-radius: 28px;
-  color: #fff;
   height: 64px;
+  padding:0 20px;
+  border-radius: 28px;
+  background: #6B37FB;
+  font-weight: 600;
+  color: #fff;
+}
+.record-header h1 > span{
+  display: inline-block;
+}
+.record-header .title-icon {
+  width: 36px;
+  height: 38px;
+  background: url(../images/icon_patient_w.svg) no-repeat center / contain;
+}
+.record-header .txt {
+  font-size: 33px;
 }
 .record-header .sub {
-  font-size: 14px;
-  color: #666;
-  margin-left: 8px;
+  font-size: 26px;
 }
 .btn-copy {
-    position: absolute;
-    right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  position: absolute;
+  right: 0;
+  padding: 8px 20px;
+  font-size: 24px;
+  font-weight: 700;
   background: #8EA3BC;
   color: #fff;
   border-radius: 15px;
   border: none;
-  padding: 8px 14px;
-  border-radius: 4px;
   cursor: pointer;
 }
 .btn-copy:hover { opacity: 0.9; }
+.btn-copy .btn-icon{
+  display: inline-block;
+  width: 23px;
+    height: 25px;
+    background: url(../images/icon_copy.svg) no-repeat center / contain;
+}
 
+
+.record-section{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 .record-section .field-box {
     background: #fff;
-    border: 1px solid #e0e0e0;
+    /* border: 1px solid #e0e0e0; */
     padding: 30px 25px 35px;
-    margin-bottom: 16px;
     box-shadow: 0px 0px 10px #0000002B;
     border-radius: 26px;
 }
 .field-box h2 {
-  font-size: 16px;
-  margin-bottom: 8px;
+  font-size: 22px;
+  color: #566575;
+  margin-bottom: 20px;
   font-weight: 500;
 }
 .field-box h2 small {
-  font-size: 12px;
-  color: #999;
-  margin-left: 4px;
+  font-size: 22px;
+  color: #566575;
+  margin-left: 0px;
 }
 .field-box p,
 .field-box ul {
-  font-size: 14px;
+  font-size: 26px;
+  color: #1E293B;
   line-height: 1.6;
 }
-.field-box ul {
-  list-style: inside disc;
+.field-box p{
+  font-weight: 600;
+}
+.field-box:nth-child(2) p{
+  font-weight: 400;
+}
+.field-box p.point{
+  font-size: 31px;
+}
+.field-box ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 65px;
+  font-weight: 600;
 }
